[bdist_wheel]
# This flag says that the code is written to work on both Python 2 and Python
# 3. If at all possible, it is good practice to do this. If you cannot, you
# will need to generate wheels for each Python version that you support.
universal=1

[aliases]
test=pytest

[flake8]
ignore=E111,E114,E501,E121,E123,E126,E226,E24,E704
exclude=.eggs,.git,venv,deploy,docs,__pycache__,node_modules

[metadata]
description_file = README.md
