[bdist_wheel]
# This flag says that the code is written to work on both Python 2 and Python
# 3. If at all possible, it is good practice to do this. If you cannot, you
# will need to generate wheels for each Python version that you support.
universal=1

[aliases]
test=pytest

[flake8]
max-line-length=140
extend-ignore=E203,E111,E114,E501,E121,E123,E126,E226,E24,E704
exclude=.eggs,.git,venv,deploy,docs,__pycache__,node_modules

[isort]
line_length=140
multi_line_output=3
include_trailing_comma=true
force_grid_wrap=0
combine_as_imports=true

[metadata]
description_file=README.md
