[flake8]
max-line-length=140
extend-ignore=E203,E111,E114,E501,E121,E123,E126,E226,E24,E704
exclude=.eggs,.git,venv,deploy,docs,__pycache__,node_modules

[isort]
line_length=140
multi_line_output=3
include_trailing_comma=true
force_grid_wrap=0
combine_as_imports=true

[metadata]
description_file=README.md
